# Attention-MatMulOpt

./: .gitignore  Attention.cpp  Attention.hpp  CMakeLists.txt  MatMuls.cpp  MatMuls.hpp  README.md  Tensor.hpp  main.cpp
inc/: Attention.hpp  MatMuls.hpp  Tensor.hpp
src/: Attention.cpp  MatMuls.cpp  main.cpp
tests/: test_gen.py
